Switched to GLSL 4 Syntax

--- a/vondehi/Makefile
+++ b/vondehi/Makefile
@@ -1,8 +1,9 @@
 
 default: test
 
-testbin: hello.c #test.c
-	$(CC) -O3 -s -o "$@" "$<" #-static -nostdlib -nostartfiles
+testbin: test.c
+	cat `which env` > "$@"
+#	$(CC) -O3 -s -o "$@" "$<" #-static -nostdlib -nostartfiles
 
 %.gz: %
 	< "$<" gzip -cnk9 > "$@"
@@ -10,11 +11,11 @@ testbin: hello.c #test.c
 	< "$<" lzma --format=lzma -9 --extreme --lzma1=preset=9,lc=1,lp=0,pb=0 --keep --stdout > "$@"
 
 vondehi: vondehi.asm
-	nasm -fbin -DNO_CHEATING -o"$@" "$<"
+	nasm -fbin -DNO_CHEATING -DWANT_ARGV -o"$@" "$<"
 	chmod +x "$@"
 
 test: vondehi testbin.lzma
-	-cat $^ > test && chmod +x test && strace -f ./test
+	-cat $^ > test && chmod +x test && strace -f ./test foo bar
 	wc -c "$<"
 
 .PHONY: default test
