--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "smol"]
 	path = smol
 	url = https://github.com/PoroCYon/smol.git
+[submodule "vondehi"]
+	path = vondehi
+	url = https://gitlab.com/PoroCYon/vondehi.git
